--- a/zipper/zipper.vcxproj
+++ b/zipper/zipper.vcxproj
@@ -165,7 +165,12 @@
     <ClCompile Include="..\zlib\zutil.c" />
     <ClCompile Include="CDirEntry.cpp" />
     <ClCompile Include="tools.cpp" />
-    <ClCompile Include="tps\dirent.c" />
+    <ClCompile Include="tps\dirent.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="unzipper.cpp" />
     <ClCompile Include="zipper.cpp" />
   </ItemGroup>
